objects/Sales_Plan_KPI_Defaults__c/Sales_Plan_KPI_Defaults__c.object-meta.xml
<CustomObject>
    <description>Stores the details needed to create a set of default Sales Plan KPI records when a new Sales Plan is created</description>
    <label>Sales Plan KPI Defaults</label>
    <nameField>
        <displayFormat>SPKD-{000000}</displayFormat>
        <label>Sales Plan KPI Defaults Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Plan KPI Defaults</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>