objects/Sales_Plan_KPI_Defaults__c/fields/KPI_Type__c.field-meta.xml
<CustomField>
    <fullName>KPI_Type__c</fullName>
    <inlineHelpText>Select the KPI Type for this KPI</inlineHelpText>
    <label>KPI Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>KPI_Label__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sales_Plan_KPI_KPI_Type</valueSetName>
    </valueSet>
</CustomField>