objects/Sales_Plan_KPI_Defaults__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Text string used in duplicate checks</description>
    <label>Label</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>