objects/Sales_Plan_KPI_Defaults__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <inlineHelpText>Select the Plan Type for which this KPI will be created</inlineHelpText>
    <label>Plan Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Plan_Type</valueSetName>
    </valueSet>
</CustomField>