objects/Sales_Plan_KPI_Defaults__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plan_Type__c</columns>
    <columns>KPI_Label__c</columns>
    <columns>KPI_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>